--- a/package.json
+++ b/package.json
@@ -9,19 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@christopherpickering/react-leaflet-markercluster": "^1.1.0",
+    "@clerk/nextjs": "^6.23.1",
+    "@google/generative-ai": "^0.24.1",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/react": "^2.24.2",
+    "@tiptap/starter-kit": "^2.24.2",
+    "@turf/turf": "^7.2.0",
+    "@types/leaflet": "^1.9.19",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.6.1",
+    "emoji-picker-react": "^4.12.3",
+    "framer-motion": "^12.23.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet.markercluster": "^1.5.3",
+    "leaflet.pattern": "^0.1.0",
+    "lucide-react": "^0.525.0",
+    "mapbox-gl": "^3.13.0",
+    "mongodb": "^6.17.0",
+    "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-map-gl": "^8.0.4",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.4",
+    "uuid": "^11.1.0",
+    "yet-another-react-lightbox": "^3.24.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/geojson": "^7946.0.16",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/react-leaflet": "^2.8.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
