--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.4.4",
+    "@react-three/fiber": "^9.2.0",
     "@tiptap/react": "^2.24.2",
     "@tiptap/starter-kit": "^2.24.2",
     "@turf/turf": "^7.2.0",
     "@types/leaflet": "^1.9.19",
+    "@types/three": "^0.178.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -37,14 +40,18 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^2.1.0",
     "react-map-gl": "^8.0.4",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
+    "react-webcam": "^7.2.0",
     "remark-gfm": "^4.0.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0",
     "tw-animate-css": "^1.3.4",
     "uuid": "^11.1.0",
     "yet-another-react-lightbox": "^3.24.0",
